--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,11 +22,7 @@
         <activity
             android:name=".controllers.activity.MainActivity"
             >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity android:name=".controllers.activity.StaffManageActivity" />
@@ -41,6 +37,13 @@
         <activity android:name=".controllers.activity.StaffEditActivity"/>
         <activity android:name=".controllers.activity.DriverEditActivity" />
         <activity android:name=".controllers.activity.MyInfoActivity" />
+        <activity android:name=".controllers.activity.LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
