--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".controllers.activity.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".controllers.activity.MainActivity">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
         </activity>
 
@@ -41,9 +36,16 @@
         <activity android:name=".controllers.activity.StaffEditActivity"/>
         <activity android:name=".controllers.activity.DriverEditActivity" />
         <activity android:name=".controllers.activity.MyInfoActivity" />
+        <activity android:name=".controllers.activity.OrderActivity"/>
         <activity android:name=".controllers.activity.LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
+        <activity android:name=".controllers.activity.RegisterActivity"/>
+        <activity android:name=".controllers.activity.ResetPWActivity"/>
     </application>
 
 </manifest>
