--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,8 @@
         <activity android:name=".controllers.activity.RegisterActivity"/>
         <activity android:name=".controllers.activity.ResetPWActivity"/>
         <activity android:name=".controllers.activity.PickupGoodsActivity"/>
+        <activity android:name=".controllers.activity.SendCarListActivity"/>
+        <activity android:name=".controllers.activity.BillingFirstActivity"/>
     </application>
 
 </manifest>
