--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
         <activity android:name=".controllers.activity.PickupGoodsActivity"/>
         <activity android:name=".controllers.activity.SendCarListActivity"/>
         <activity android:name=".controllers.activity.BillingFirstActivity"/>
+        <activity android:name=".controllers.activity.BillingSecondActivity"/>
     </application>
 
 </manifest>
