--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,47 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.tcwl_manage">
+<manifest
+    package="com.example.tcwl_manage"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
+    <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.GET_TASKS"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
+
 
     <application
-        android:hardwareAccelerated="false"
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+
         <activity android:name=".controllers.activity.MainActivity">
 
 
         </activity>
 
-        <activity android:name=".controllers.activity.StaffManageActivity" />
-        <activity android:name=".controllers.activity.CarManageActivity" />
-        <activity android:name=".controllers.activity.DriverManageActivity" />
-        <activity android:name=".controllers.activity.PricingManageActivity" />
-        <activity android:name=".controllers.activity.CustomerManageActivity" />
-        <activity android:name=".controllers.activity.NewStaffAddActivity" />
-        <activity android:name=".controllers.activity.NewDriverAddActivity" />
-        <activity android:name=".controllers.activity.NewCarAddActivity" />
-        <activity android:name=".controllers.activity.NewCustomerAddActivity" />
+        <activity android:name=".controllers.activity.StaffManageActivity"/>
+        <activity android:name=".controllers.activity.CarManageActivity"/>
+        <activity android:name=".controllers.activity.DriverManageActivity"/>
+        <activity android:name=".controllers.activity.PricingManageActivity"/>
+        <activity android:name=".controllers.activity.CustomerManageActivity"/>
+        <activity android:name=".controllers.activity.NewStaffAddActivity"/>
+        <activity android:name=".controllers.activity.NewDriverAddActivity"/>
+        <activity android:name=".controllers.activity.NewCarAddActivity"/>
+        <activity android:name=".controllers.activity.NewCustomerAddActivity"/>
         <activity android:name=".controllers.activity.StaffEditActivity"/>
-        <activity android:name=".controllers.activity.DriverEditActivity" />
-        <activity android:name=".controllers.activity.MyInfoActivity" />
+        <activity android:name=".controllers.activity.DriverEditActivity"/>
+        <activity android:name=".controllers.activity.MyInfoActivity"/>
         <activity android:name=".controllers.activity.OrderActivity"/>
         <activity android:name=".controllers.activity.LoginActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity android:name=".controllers.activity.RegisterActivity"/>
@@ -50,6 +54,8 @@
         <activity android:name=".controllers.activity.SendCarListActivity"/>
         <activity android:name=".controllers.activity.BillingFirstActivity"/>
         <activity android:name=".controllers.activity.BillingSecondActivity"/>
+        <activity android:name=".controllers.activity.BillingThirdActivity"/>
+        <activity android:name=".controllers.activity.SendCarMapActivity"/>
     </application>
 
 </manifest>
